# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "http://my-default-host.com",
+            "url": "http://127.0.0.1:8000",
             "description": "StopVol API Server"
         }
     ],
@@ -29,10 +29,10 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "phone_number"
+                                    "phone"
                                 ],
                                 "properties": {
-                                    "phone_number": {
+                                    "phone": {
                                         "description": "Numéro de téléphone",
                                         "type": "string",
                                         "example": "+22670123456"
@@ -115,11 +115,11 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "phone_number",
+                                    "phone",
                                     "otp"
                                 ],
                                 "properties": {
-                                    "phone_number": {
+                                    "phone": {
                                         "description": "Numéro de téléphone",
                                         "type": "string",
                                         "example": "+22670123456"
@@ -656,7 +656,7 @@
                         "format": "uuid",
                         "example": "550e8400-e29b-41d4-a716-446655440000"
                     },
-                    "phone_number": {
+                    "phone": {
                         "description": "Numéro de téléphone",
                         "type": "string",
                         "example": "+22670123456"
